# helix

./: .gitignore  LICENSE  README.md  main.py  order.fasta  prot_esm.py  prot_mpnn.py  pyproject.toml
.github/workflows/: python-publish.yml
helix/: .cursorignore  __init__.py  diffdock.py  embeddings.py  esm.py  evoprotgrad.py  filecache.py  flows.py  main.py  mmseqs.ipynb  mmseqs.py  pocketgen.py  proteinmpnn.py  synthesis.py  utils.py
helix/WIP/: ai.py  evoprotgrad.py  pocketgen.py  rosetta.py
helix/WIP/finetuning/: inference.py
helix/WIP/longread_umi/: main.py
helix/WIP/sequence/: deprecated.py  scorer copy.py
helix/analysis/: esm_dms.py  mmseqs.py  virtual_dms.py
helix/analysis/finetuning/: common.py  utils.py
helix/analysis/sequence/: scorer.py
helix/analysis/structure/: predictor.py  utils.py
helix/core/: __init__.py  images.py  volumes.py
helix/design/: evoprotgrad.py  proteinmpnn.py  rosetta.py
helix/finetuning/: train.py  train_cli.py  training_config.yaml
helix/functions/: diffdock.py  embedding.py  mmseqs.py  unimol.py
helix/protein_design/: esm_dms.py
helix/sequencing/: bartender.py
helix/sequencing/longread_umi/: install_conda.sh  main.py
helix/utils/: molecule.py  sequence.py  structure.py
proteinator/: __init__.py  esm.py  proteinmpnn.py
