[tool.poetry]
name = "proteinator"
version = "0.1.0"
description = ""
authors = ["Ragnor Comerford <hello@ragnor.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
biopython = "^1.81"
modal = "^0.52.3518"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
