[tool.poetry]
name = "helixbio"
version = "0.2.0"
description = ""
authors = ["Ragnor Comerford <hello@ragnor.co>"]
readme = "README.md"
packages = [
    { include = "helix", from = "./" }
]

[tool.poetry.dependencies]
python = "^3.10"
biopython = "^1.81"
modal = "^0.62.43"
dnachisel = "^3.2.11"
torch = "^2.0.1"
transformers = "^4.30.0"
matplotlib = "^3.8.0"
evo-prot-grad = "^0.1.4"
pandas = "^2.1.4"
litellm = "^1.18.1"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
ignore = [
  "E712",  # Allow using if x == False, as it's not always equivalent to if x.
  "E501",  # Supress line-too-long warnings: trust black's judgement on this one.
  "E741", # Annoying lint rule preventing short variable names
  "E731", # Don't assign a lambda expression.
  ]